# trueapps

./: .gitignore  LICENSE  README.md  pyproject.toml  trueapps.py
service/: truenas_service.py
src/trueapps/: __init__.py  cli.py
src/trueapps/service/: truenas_service.py
src/trueapps/utils/: apps.py  logs.py
